# aoc2021

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: day1.rs
