[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["didi <didi@leaf.space>"]
packages = [
    { include = "cli.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.0"

[tool.poetry.scripts]
new = "cli:main"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
devtools = "^0.8.0"
flake8 = "^4.0.1"
mypy = "^0.910"
pre-commit = "^2.15.0"
unimport = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
